compiler/src/test/resources/golden/errors/type_arg_mismatch.dawn
fn add(a: Int, b: Int) -> Int = a + b

fn f() -> Int = add(1, "two")
