compiler/src/test/resources/golden/errors/type_arg_mismatch.err
error: argument type mismatch: expected Int, got String
  --> type_arg_mismatch.dawn:3:24
  |
3 | fn f() -> Int = add(1, "two")
  |                        ^^^^^
  = hint: signature: fn add(a: Int, b: Int) -> Int
